--- a/styles/components/_avatar.scss
+++ b/styles/components/_avatar.scss
@@ -32,7 +32,8 @@
   }
 
   &__text {
-    white-space: pre-wrap;
+    white-space: break-spaces;
+
     .sb-title,
     .sb-subtitle {
       margin: 0;
